--- a/CSS/ClasesCSS/Clase1/clase1.css
+++ b/CSS/ClasesCSS/Clase1/clase1.css
@@ -4,8 +4,29 @@
 
 */
 
-/*ejempo de elemento ya establecido*/
+/*ejemplo de elemento ya establecido*/
 p{
    font-size: 18px;
    color:blue;
+}
+
+h2{
+font-size: 24px;
+}
+
+span{
+   display:block;
+   color:blue;
+}
+
+/**ejemplo de una clase*/
+
+#content-header{
+  color:red;
+  font-size:18px;
+}
+
+/*ejemplo de una ID*/
+.deck{
+  color:red;
 }
